--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,9 @@
-:root {
+*{
+  padding:0;
+  margin:0;
+}
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +109,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
