--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,12 @@
   margin:0;
 }
 
+@font-face {
+  font-family: LINESeed;
+  src: url("/fonts/LINESeedSansTH_W_Rg.woff2");
+  format: ("woff2");
+}
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
