Squashed commit of the following:
commit 13007a37a3df283fce05cb0b923021e6487d57d0
Author: Chinnapat Nitipornsri <kharkkr@gmail.com>
Date:   Thu Feb 2 17:28:10 2023 +0700

    Move JOIN button from left to right

commit 08bdf537aab6dbd315c730367b7976c84f7cb90c
Author: Nichapat Kerkkittikul <palm.nichapat@gmail.com>
Date:   Thu Feb 2 16:35:08 2023 +0700

    Edit title

commit f76ac771fce43bae0bfe56c9579aa776dccd5fb2
Author: Nichapat Kerkkittikul <palm.nichapat@gmail.com>
Date:   Thu Feb 2 16:26:31 2023 +0700

    Style font to any text

commit be32815d88cf1e5d0d80fd84fa92e6d714fc7b72
Author: Nichapat Kerkkittikul <palm.nichapat@gmail.com>
Date:   Thu Feb 2 15:53:05 2023 +0700

    Add font

commit 5ba250dc0c783fa533435e349a1161bf57797aec
Author: Nichapat Kerkkittikul <palm.nichapat@gmail.com>
Date:   Thu Feb 2 10:55:52 2023 +0700

    Edit incorrect file name (feild to field)

commit f85f04eaf07c2248253f8bcefcf0be2921fadc14
Author: Chinnapat Nitipornsri <kharkkr@gmail.com>
Date:   Thu Feb 2 10:38:36 2023 +0700

    Add navbar color

commit 7befdb6fe7e147f490afc3a42c37420b3a75f309
Author: Chinnapat Nitipornsri <kharkkr@gmail.com>
Date:   Thu Feb 2 10:37:30 2023 +0700

    Adjust layout same as figma

commit c756ebb33ac18e158e7c889d08d3edcfb827bd05
Author: Chinnapat Nitipornsri <kharkkr@gmail.com>
Date:   Wed Feb 1 21:42:19 2023 +0700

    Organize Data types

commit 9643896eedf75a1d9428146e0c222d501ce090f2
Author: Chinnapat Nitipornsri <kharkkr@gmail.com>
Date:   Wed Feb 1 21:41:04 2023 +0700

    Add PostCard

commit 6dfe08b19e98659a3d98e5711db74cf5cb4eab39
Author: Chinnapat Nitipornsri <kharkkr@gmail.com>
Date:   Wed Feb 1 21:39:41 2023 +0700

    Organize components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,13 @@
-*{
+* {
   padding:0;
   margin:0;
+  font-family: LINESeed;
+}
+
+@font-face {
+  font-family: LINESeed;
+  src: url("/fonts/LINESeedSansTH_W_Rg.woff2");
+  format: ("woff2");
 }
 
 /* :root {
