Use link from next instead mui in navbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,11 @@
   format: ("woff2");
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
