--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,21 @@
-:root {
+* {
+  padding:0;
+  margin:0;
+  font-family: LINESeed;
+}
+
+@font-face {
+  font-family: LINESeed;
+  src: url("/fonts/LINESeedSansTH_W_Rg.woff2");
+  format: ("woff2");
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +121,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
